--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,13 +23,13 @@ img.emoji {
 }
 </style>
 
-    <link href="css/bootstrap.css" rel="stylesheet">
-    <link href="css/social.css" rel="stylesheet">
+    <link href="{{site.baseurl}}/css/bootstrap.css" rel="stylesheet">
+    <link href="{{site.baseurl}}/css/social.css" rel="stylesheet">
     
     <!-- Custom styles for this template -->
-    <link href="css/style.css" rel="stylesheet">
-    <link href="css/custom.css" rel="stylesheet">
-<script src="js/gen_validatorv4.js"></script>    
+    <link href="{{site.baseurl}}/css/style.css" rel="stylesheet">
+    <link href="{{site.baseurl}}/css/custom.css" rel="stylesheet">
+<script src="{{site.baseurl}}/js/gen_validatorv4.js"></script>    
 
 <!-- Start Alexa Certify Javascript -->
 
@@ -43,7 +43,7 @@ img.emoji {
           <div class="container">
           		<div class="row">
                 	<div class="col-lg-6 col-sm-6">
-                    	<div class="logo"><a href="index.html"><img src="image/logo.png"></a></div>
+                    	<div class="logo"><a href="index.html"><img src="{{site.baseurl}}/image/logo.png"></a></div>
 
                     </div>
                     <!--<div class="col-lg-2 col-sm-2">
@@ -54,7 +54,7 @@ img.emoji {
                     
                     
                 	<div class="col-lg-4 col-sm-4">
-                    <div class="top-right"><img src="image/top_car_img.png"></div>
+                    <div class="top-right"><img src="{{site.baseurl}}/image/top_car_img.png"></div>
                     </div>
                 </div>
           </div>
@@ -226,9 +226,9 @@ img.emoji {
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="../ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>  
-<script type="text/javascript" src="js/jquery.meanmenu.js"></script> 
-    <script src="js/custom.html"></script>
+    <script src="{{site.baseurl}}/js/bootstrap.min.js"></script>  
+<script type="text/javascript" src="{{site.baseurl}}/js/jquery.meanmenu.js"></script> 
+    <script src="{{site.baseurl}}/js/custom.html"></script>
 <script type="text/javascript">
 	jQuery(document).ready(function () {
 		jQuery(document).ready(function () {
