--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,12 +23,12 @@ img.emoji {
 }
 </style>
 
-    <link href="css/bootstrap.css" rel="stylesheet">
-    <link href="css/social.css" rel="stylesheet">
+    <link href="{{site.baseurl}}/css/bootstrap.css" rel="stylesheet">
+    <link href="{{site.baseurl}}/css/social.css" rel="stylesheet">
     
     <!-- Custom styles for this template -->
-    <link href="css/style.css" rel="stylesheet">
-    <link href="css/custom.css" rel="stylesheet">
+    <link href="{{site.baseurl}}/css/style.css" rel="stylesheet">
+    <link href="{{site.baseurl}}/css/custom.css" rel="stylesheet">
 <script src="js/gen_validatorv4.js"></script>    
 
 <!-- Start Alexa Certify Javascript -->
@@ -224,9 +224,9 @@ img.emoji {
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="../ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>  
-<script type="text/javascript" src="js/jquery.meanmenu.js"></script> 
-    <script src="js/custom.html"></script>
+    <script src="{{site.baseurl}}/js/bootstrap.min.js"></script>  
+<script type="text/javascript" src="{{site.baseurl}}/js/jquery.meanmenu.js"></script> 
+    <script src="{{site.baseurl}}/js/custom.html"></script>
 <script type="text/javascript">
 	jQuery(document).ready(function () {
 		jQuery(document).ready(function () {
