--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,7 @@ img.emoji {
           <div class="container">
           		<div class="row">
                 	<div class="col-lg-6 col-sm-6">
-                    	<div class="logo"><a href="index.html"><img src="image/logo.png"></a></div>
+                    	<div class="logo"><a href="index.html"><img src="{{site.baseurl}}/image/logo.png"></a></div>
 
                     </div>
                     <!--<div class="col-lg-2 col-sm-2">
@@ -54,7 +54,7 @@ img.emoji {
                     
                     
                 	<div class="col-lg-4 col-sm-4">
-                    <div class="top-right"><img src="image/top_car_img.png"></div>
+                    <div class="top-right"><img src="{{site.baseurl}}/image/top_car_img.png"></div>
                     </div>
                 </div>
           </div>
@@ -85,7 +85,10 @@ img.emoji {
         </div>
     </header>
 
+
 {{content}}
+
+
     <footer><div id="fb-root"></div>
 
     	<div class="footer">
