--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -89,7 +89,8 @@ img.emoji {
 {{content}}
 
 
-    <footer><div id="fb-root"></div>
+    <footer style=" background:url(../../image/eshop/footer_bg.png) center bottom repeat-x;">
+    <div id="fb-root"></div>
 
     	<div class="footer">
         	<div class="container"> 
