--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -89,7 +89,7 @@ img.emoji {
 {{content}}
 
 
-    <footer style=" background:url({{site.baseurl}}/image/eshop/footer_bg.png) center bottom repeat-x;">
+    <footer style="background:url({{site.baseurl}}/image/footer_bg.png) center bottom repeat-x;">
     <div id="fb-root"></div>
 
     	<div class="footer">
