--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,7 +65,7 @@ img.emoji {
                     <div id="nav">
                         <ul  class="menu-left">
                         <li><a  href="index.html"  data-toggle="modal" data-target="#Modalcallback">Home</a></li>
-<li><a  href="products/cars/cars.html" data-toggle="modal" data-target="#Modalcallback2">CARS</a></li>
+<li><a  href="{{site.baseurl}}/cars.html" data-toggle="modal" data-target="#Modalcallback2">CARS</a></li>
 <li><a  href="products/trucks/truck.html"  data-toggle="modal" data-target="#Modalcallback3">Trucks</a></li>
 <li class="highlight-text"><a href="http://www.google.com">GET APPROVED NOW!</a></li>
 <li><a  href="products/suvs/suvs.html"  data-toggle="modal" data-target="#Modalcallback5">Suvs</a></li>
