--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -10,6 +10,7 @@ layout: default
         	<div class="row">
             	<div class="col-lg-12">
                 	<ul class="product-nav">
+                	{{content}}
                        {% for car in site.data.car-section %}
                        <li>
                             <div class="gallery-box">
